clusters/iot/namespace-longhorn-system/patch-driver-tolerations.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: longhorn-driver-deployer
spec:
  template:
    spec:
      tolerations:
      - key: "node-role.kubernetes.io/master"
        operator: "Exists"
        effect: "NoSchedule"
      - key: "node-role.leetserve.com/mothership"
        operator: "Exists"
        effect: "NoSchedule"
