clusters/iot/namespace-longhorn-system/patch-ui-tolerations.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: longhorn-ui
  namespace: longhorn-system
spec:
  template:
    spec:
      tolerations:
      - key: node-role.kubernetes.io/master
        operator: Exists
        effect: NoSchedule
      - key: node-role.kubernetes.io/control-plane
        operator: Exists
        effect: NoSchedule
